tests/baselines/reference/ambientShorthand_isImplicitAny.errors.txt
tests/cases/conformance/ambient/ambientShorthand_isImplicitAny.ts(1,16): error TS7005: Variable '"jquery"' implicitly has an 'any' type.


==== tests/cases/conformance/ambient/ambientShorthand_isImplicitAny.ts (1 errors) ====
    declare module "jquery";
                   ~~~~~~~~
!!! error TS7005: Variable '"jquery"' implicitly has an 'any' type.
    